--- a/index.html
+++ b/index.html
@@ -2,11 +2,41 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0" />
         <title>Vite + TS</title>
     </head>
     <body>
+        <header>
+            <div class="info">
+                <p class="label">Number of current shapes</p>
+                <p class="value" id="total-shapes">0</p>
+            </div>
+            <div class="info">
+                <p class="label">Surface area</p>
+                <p class="value" id="total-area">0</p>
+            </div>
+        </header>
+
         <div id="app"></div>
+    
+        <footer>
+            <div class="info">
+                <div class="buttons">
+                    <div class="btn btn-minus" id="shapes-decrease">−</div>
+                    <div class="btn btn-plus" id="shapes-increase">+</div>
+                </div>
+                <p class="label">Shapes per second</p>
+                <p class="value" id="shapes-per-second">0</p>
+            </div>
+            <div class="info">
+                <div class="buttons">
+                    <div class="btn btn-minus" id="gravity-decrease">−</div>
+                    <div class="btn btn-plus" id="gravity-increase">+</div>
+                </div>
+                <p class="label">Gravity</p>
+                <p class="value" id="gravity">0</p>
+            </div>
+        </footer>
         <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
